Refactoring + tests on syntax analyzer for create and insert query